# randomly

./: Cargo.toml  README.md  README.tpl
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/randomly/: all.html  index.html  macro.randomly!.html  macro.randomly.html  sidebar-items.js
docs/src/cfg_if/: lib.rs.html
docs/src/getrandom/: error.rs.html  error_impls.rs.html  lib.rs.html  linux_android.rs.html  use_file.rs.html  util.rs.html  util_libc.rs.html
docs/src/libc/: fixed_width_ints.rs.html  lib.rs.html  macros.rs.html
docs/src/libc/unix/: align.rs.html  mod.rs.html
docs/src/libc/unix/linux_like/: mod.rs.html
docs/src/libc/unix/linux_like/linux/: align.rs.html  mod.rs.html  (+1 more)
docs/src/ppv_lite86/: lib.rs.html  soft.rs.html  types.rs.html
docs/src/ppv_lite86/x86_64/: mod.rs.html  sse2.rs.html
docs/src/rand/: lib.rs.html  prelude.rs.html  rng.rs.html
docs/src/rand/distributions/: bernoulli.rs.html  distribution.rs.html  float.rs.html  integer.rs.html  mod.rs.html  other.rs.html  slice.rs.html  uniform.rs.html  utils.rs.html  weighted.rs.html  weighted_index.rs.html
docs/src/rand/rngs/: mock.rs.html  mod.rs.html  std.rs.html  thread.rs.html
docs/src/rand/rngs/adapter/: mod.rs.html  read.rs.html  reseeding.rs.html
docs/src/rand/seq/: index.rs.html  mod.rs.html
docs/src/rand_chacha/: chacha.rs.html  guts.rs.html  lib.rs.html
docs/src/rand_core/: block.rs.html  error.rs.html  impls.rs.html  le.rs.html  lib.rs.html  os.rs.html
docs/src/randomly/: lib.rs.html  randomly.rs.html
examples/: demo.rs
src/: lib.rs
(+8 files in other folders)
