[package]
name = "randomly"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
version = "0.2.1"
edition = "2021"
description = "Macro to randomly choose an alternative."
license = "MIT"
repository = "https://github.com/BartMassey/randomly"
readme = "README.md"
categories = ["game-development", "rust-patterns", "simulation"]

[dependencies]
rand = "0.8"
